@@ -1,4 +1,5 @@
 !m4/manywarnings.m4
+!m4/pkg.m4
 !m4/warnings.m4
 *.cache
 *.lo
