@@ -2,6 +2,8 @@ Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
 * Version 2.12 (unreleased)
 
+** Use pkg-config to find curl, instead of libcurl.m4.
+
 * Version 2.11 (released 2013-07-24)
 
 ** Fix breakage with latest automake.
